set(NAME "contracts")
project(${NAME})
message("*** Building ${NAME} ***")

set(STANDARD_INCLUDE_FOLDERS ${CMAKE_SOURCE_DIR}/contracts ${CMAKE_SOURCE_DIR}/contracts/libc++/upstream/include ${CMAKE_SOURCE_DIR}/contracts/musl/upstream/include)
message("*** Building eosiolib ***")
add_subdirectory(eosiolib)
message("*** Building musl ***")
add_subdirectory(musl)
message("*** Building libc++ ***")
add_subdirectory(libc++)
message("*** Building eosio.system ***")
add_subdirectory(eosio.system)
message("*** Building identity ***")
add_subdirectory(identity)
message("*** Building currency ***")
add_subdirectory(currency)
message("*** Building stltest ***")
add_subdirectory(stltest)
#add_subdirectory(bancor)
#add_subdirectory(eosio.system)
message("*** Building asserter ***")
add_subdirectory(asserter)
#add_subdirectory(exchange)
message("*** Building infinite ***")
add_subdirectory(infinite)
message("*** Building proxy ***")
add_subdirectory(proxy)
message("*** Building test_api ***")
add_subdirectory(test_api)
#add_subdirectory(simpledb)
#add_subdirectory(storage)
#add_subdirectory(social)
message("*** Building test.system ***")
add_subdirectory(test.system)
message("*** Building noop ***")
add_subdirectory(noop)

install( DIRECTORY eosiolib DESTINATION include/ )
install( DIRECTORY skeleton DESTINATION share/ )
