message("*** Building eosiod ***")
add_subdirectory( eosiod )
message("*** Building eosioc ***")
add_subdirectory( eosioc )
message("*** Building eosiowd ***")
add_subdirectory( eosiowd )
message("*** Building eosio-launcher ***")
add_subdirectory( eosio-launcher )
message("*** Building eosio-codegen ***")
add_subdirectory( eosio-codegen )
message("*** Building eosio-applesedemo ***")
add_subdirectory( eosio-applesedemo )
message("*** Building eosio-abigen ***")
add_subdirectory( eosio-abigen )
